...
          tabBarIcon: (p: TabIconProps) => <ActivityIcon {...p} badge={activityBadge} />,
        }}
      />
      <Tabs.Screen
        name="trips"
        options={{
          title: 'Trajets',
          tabBarIcon: (p: TabIconProps) => <TripsIcon {...p} />,
        }}
      />
      <Tabs.Screen
        name="account"
        options={{
          title: 'Compte',
          tabBarIcon: (p: TabIconProps) => <AccountIcon {...p} />,
        }}
      />
    </Tabs>
  );
}
...
